--- a/index-mock.html
+++ b/index-mock.html
@@ -6,6 +6,10 @@
     <title>Network Visualization (Mock Data)</title>
     <link rel="stylesheet" href="css/styles.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/7.8.5/d3.min.js"></script>
+    <script type="module">
+      import * as Plot from "https://cdn.jsdelivr.net/npm/@observablehq/plot@0.6/+esm";
+      window.Plot = Plot;
+    </script>
   </head>
   <body>
     <div class="container">
@@ -27,13 +31,11 @@
       window.USE_MOCK_DATA = true;
     </script>
 
-    <!-- Load the combined mock data generator first -->
-    <script src="js/MockDataGenerator.js"></script>
-
-    <!-- Then load the rest of the application -->
+    <!-- Load the application scripts -->
     <script src="js/DetailsPanelManager.js"></script>
     <script src="js/NetworkStats.js"></script>
     <script src="js/NetworkVisualizer.js"></script>
+    <script src="js/MockDataGenerator.js"></script>
     <script src="js/init.js"></script>
   </body>
 </html>
