--- a/index-mock.html
+++ b/index-mock.html
@@ -61,11 +61,11 @@
 
       <!-- Main content -->
       <div class="off-canvas-content" data-off-canvas-content>
-        <div class="grid-x">
-          <div class="cell small-12 medium-8 large-9 visualization-container">
+        <div class="grid-x grid-margin-x content main-content-wrapper">
+          <div class="cell small-12 medium-8 large-6 visualization-container">
             <svg id="network"></svg>
           </div>
-          <div class="cell small-12 medium-4 large-3">
+          <div class="cell small-12 medium-4 large-6 details-container">
             <div id="details-panel" class="details-panel">
               <div class="details-content">
                 <div class="no-selection-message">
